# memofn

./: README.md  pyproject.toml
momoize/: __init__.py  memoizable.py  mvp.py
momoize/utils/: hashable.py
tests/: test_mvp.py
