[tool.poetry]
name = "momoize"
version = "0.1.0"
description = ""
authors = ["Moises Baltazar <me@moisesb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
